--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "sample-webpack-typescript",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ts-loader": "5.3.0",
+    "typescript": "3.1.6",
+    "webpack": "4.25.1",
+    "webpack-cli": "3.1.2"
+  }
 }
